# PLCnext-ROS-bridge

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  README.md  dep.repo  dockerfile  dockerfile_manually  dockerfile_x86  index.html  package.xml  requirements.txt  setup.py  start.sh
app/: app-compose.yml  app_info.json  compose.yml  initscript.sh  readme.md  user.env
ci/gitlab_templates/: RULES.yml
config/: heartbeat_config.yaml  interface_description.yaml  liveliness_config.yaml  services_params.yaml  test_params.yaml
include/phoenix_bridge/: bridge_type.h  bridge_type.hpp  conversions.hpp  dummy_phoenix_comm.h  include_types.h  params_struct.h  params_struct.hpp  phoenix_bridge.h  phoenix_bridge.hpp  phoenix_bridge.hpp.autosave  phoenix_comm.h  phoenix_comm.hpp  phoenix_io_services.h  phoenix_io_services.hpp  read_conversions.h  read_conversions.hpp  write_conversions.h  write_conversions.hpp
include/phoenix_bridge/ServiceStubs/: ArpTypes.pb.cc  ArpTypes.pb.h  DateStructure.grpc.pb.cc  DateStructure.grpc.pb.h  DateStructure.pb.cc  DateStructure.pb.h  DateTime.grpc.pb.cc  DateTime.grpc.pb.h  DateTime.pb.cc  DateTime.pb.h
include/phoenix_bridge/ServiceStubs/Device/Interface/: AccessErrorCode.grpc.pb.cc  AccessErrorCode.grpc.pb.h  AccessErrorCode.pb.cc  AccessErrorCode.pb.h  DeviceSettingItem.grpc.pb.cc  DeviceSettingItem.grpc.pb.h  DeviceSettingItem.pb.cc  DeviceSettingItem.pb.h  DeviceSettingResult.grpc.pb.cc  DeviceSettingResult.grpc.pb.h  DeviceSettingResult.pb.cc  DeviceSettingResult.pb.h  IDeviceControlService.grpc.pb.cc  IDeviceControlService.grpc.pb.h  IDeviceControlService.pb.cc  IDeviceControlService.pb.h  IDeviceInfoService.grpc.pb.cc  IDeviceInfoService.grpc.pb.h  IDeviceInfoService.pb.cc  IDeviceInfoService.pb.h  IDeviceSettingsService.grpc.pb.cc  IDeviceSettingsService.grpc.pb.h  IDeviceSettingsService.pb.cc  IDeviceSettingsService.pb.h  IDeviceStatusService.grpc.pb.cc  IDeviceStatusService.grpc.pb.h  IDeviceStatusService.pb.cc  IDeviceStatusService.pb.h
include/phoenix_bridge/ServiceStubs/Includes/: AuthenticationError.pb.h  DataType.pb.h  DateTime.pb.h  SecurityToken.pb.h  Severity.pb.h  VariableInfo.pb.h
include/phoenix_bridge/ServiceStubs/Io/Axioline/: AxioDeviceConfiguration.grpc.pb.cc  AxioDeviceConfiguration.grpc.pb.h  AxioDeviceConfiguration.pb.cc  AxioDeviceConfiguration.pb.h  AxioResult.grpc.pb.cc  AxioResult.grpc.pb.h  AxioResult.pb.cc  AxioResult.pb.h  IAcyclicCommunicationService.grpc.pb.cc  IAcyclicCommunicationService.grpc.pb.h  IAcyclicCommunicationService.pb.cc  IAcyclicCommunicationService.pb.h  IAxioMasterService.grpc.pb.cc  IAxioMasterService.grpc.pb.h  IAxioMasterService.pb.cc  IAxioMasterService.pb.h  PdiParam.grpc.pb.cc  PdiParam.grpc.pb.h  PdiParam.pb.cc  PdiParam.pb.h  PdiResult.grpc.pb.cc  PdiResult.grpc.pb.h  PdiResult.pb.cc  PdiResult.pb.h
include/phoenix_bridge/ServiceStubs/Plc/: DataType.grpc.pb.cc
include/phoenix_bridge/ServiceStubs/Plc/Gds/: DataAccessError.grpc.pb.cc  DataAccessError.pb.h  ForceItem.grpc.pb.cc  IDataAccessService.grpc.pb.cc  IDataAccessService.pb.h  IForceService.grpc.pb.cc  IForceService.pb.cc  ISubscriptionService.grpc.pb.cc  ISubscriptionService.pb.cc  ReadItem.grpc.pb.cc  ReadItem.pb.h  SubscriptionKind.pb.h  VariableInfo.grpc.pb.cc  VariableInfo.pb.h  WriteItem.pb.h
launch/: launch_phoenix_bridge.py  phoenix_bridge.launch  phoenix_io_services.launch
phoenix_bridge/: CMakeLists.txt  msg_parser.py  package.xml  param_parser.py  setup.py
phoenix_bridge/config/: interface_description.yaml  liveliness_config.yaml  services_params.yaml
phoenix_bridge/include/phoenix_bridge/: bridge_type.h  bridge_type.hpp  include_types.h  params_struct.h  phoenix_bridge.h  phoenix_comm.hpp  phoenix_io_services.h  phoenix_io_services.hpp  read_conversions.h  read_conversions.hpp  write_conversions.h  write_conversions.hpp
phoenix_bridge/include/phoenix_bridge/ServiceStubs/: ArpTypes.grpc.pb.cc  ArpTypes.grpc.pb.h
phoenix_bridge/launch/: launch_phoenix_bridge.py  phoenix_bridge.launch  phoenix_io_services.launch
phoenix_bridge/phoenix_bridge/: msg_parser.py  param_parser.py
phoenix_bridge/src/: liveliness_check.cpp  phoenix_bridge_node.cpp  phoenix_io_services.cpp  phoenix_io_services_node.cpp
phoenix_bridge/src/parsers/: param_parser.py
phoenix_bridge/srv/: AnalogIO.srv  BatchSetIO.srv
phoenix_bridge/test/: launch_test_bridge.test.py  test_read_conversions.cpp  test_write_conversions.cpp
phoenix_bridge/test/scripts/: batch_get_io.py  batch_set_io.py  pub_odom.py  pub_string.py  read_analog_io.py  single_get_io.py  single_set_io.py  write_analog_io.py
phoenix_bridge/tests/component_tests/: test_description.yaml  test_topics.cpp  test_topics.test
phoenix_bridge/tests/scripts/: batch_get_dio.py  batch_set_dio.py  get_single_dio.py  pub_odom.py  pub_string.py  pub_twist.py  read_analog_io.py  set_single_dio.py  write_analog_io.py
phoenix_bridge/tests/unit_tests/: test_write_conversion.cpp
phoenix_dependencies/: Dockerfile  dep.repo
phoenix_interfaces/: CMakeLists.txt  package.xml
phoenix_interfaces/msg/: SetIO.msg
phoenix_interfaces/srv/: AnalogIO.srv  SingleSetIO.srv
src/: heartbeat_detector.cpp  phoenix_bridge.cpp  phoenix_bridge_node.cpp  phoenix_io_services.cpp  phoenix_io_services_node.cpp
src/param_parser/: param_parser.py
src/parsers/: msg_parser.py  param_parser.py
srv/: BatchGetIO.srv  SingleGetIO.srv
test/: launch_test_bridge.test.py  test_conversions.cpp  test_read_conversions.cpp  test_write_conversions.cpp
test/scripts/: pub_odom.py  pub_string.py  pub_twist.py  single_get_io.py
tests/component_tests/: test_topics.cpp
tests/scripts/: batch_get_dio.py  batch_set_dio.py  get_single_dio.py  pub_odom.py  pub_string.py  pub_twist.py  read_analog_io.py  set_single_dio.py  write_analog_io.py
tests/unit_tests/: read_conversion.cpp  read_conversion.test  test_read_conversion.cpp  test_read_conversion.test  test_write_conversion.cpp  test_write_conversion.test  write_conversion.cpp  write_conversion.test
(+165 files in other folders)
