<?xml version="1.0"?>
<package format="2">
  <name>phoenix_bridge</name>
  <version>0.4.6</version>
  <description>The phoenix_bridge package</description>

  <maintainer email="phoenix_or_ipa@todo.todo">todo</maintainer>
  <author email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roslint</depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
