<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phoenix_interfaces</name>
  <version>0.6.1</version>
  <description>ROS2 Phoenix interfaces</description>

  <maintainer email="phoenix_or_ipa@todo.todo">todo</maintainer>
  <maintainer email="tejas.kumar.shastha@ipa.fraunhofer.de">Tejas</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
